--- a/background.html
+++ b/background.html
@@ -25,7 +25,16 @@
 <div class="fourth">
     <h1>apply image with color in background</h1>
 </div>
-<div></div>
+
+
+<div class="fourth fifth">
+    <h1>CSS, which stands for Cascading Style Sheets, is a stylesheet language used to describe the presentation of a document written in a markup language</h1>
+</div>
+
+<div class="sixth">
+    <h1>hich stands for Cascading Style Sheets, is a stylesheet language used to describe the </h1>
+    <p>The web is a system of interconnected public webpages and resources, accessible via the Internet, that allows users to share and find information through browsers. It was invented by Tim Berners-Lee at CERN in 1989 and is built using technologies like HTML for structure, CSS for styling, and JavaScript for interactivity. The web is a key application on top of the Internet, which is the underlying global network infrastructure. The web is a system of interconnected public webpages and resources, accessible via the Internet, that allows users to share and find information through browsers. It was invented by Tim Berners-Lee at CERN in 1989 and is built <img src="https://m.media-amazon.com/images/I/61qbMx4oXJL._AC_UF1000,1000_QL80_.jpg"> using technologies like HTML for structure, CSS for styling, and JavaScript for interactivity. The web is a key application on top of the Internet, which is the underlying global network infrastructure. The web is a system of interconnected public webpages and resources, accessible via the Internet, that allows users to share and find information through browsers. It was invented by Tim Berners-Lee at CERN in 1989 and is built using technologies like HTML for structure, CSS for styling, and JavaScript for interactivity. The web is a key application on top of the Internet, which is the underlying global network infrastructure. The web is a system of interconnected public webpages and resources, accessible via the Internet, that allows users to share and find information through browsers. It was invented by Tim Berners-Lee at CERN in 1989 and is built using technologies like HTML for structure, CSS for styling, and JavaScript for interactivity. The web is a key application on top of the Internet, which is the underlying global network infrastructure. The web is a system of interconnected public webpages and resources, accessible via the Internet, that allows users to share and find information through browsers. It was invented by Tim Berners-Lee at CERN in 1989 and is built using technologies like HTML for structure, CSS for styling, and JavaScript for interactivity. The web is a key application on top of the Internet, which is the underlying global network infrastructure. The web is a system of interconnected public webpages and resources, accessible via the Internet, that allows users to share and find information through browsers. It was invented by Tim Berners-Lee at CERN in 1989 and is built using technologies like HTML for structure, CSS for styling, and JavaScript for interactivity. The web is a key application on top of the Internet, which is the underlying global network infrastructure. </p>
+</div>
     
 </body>
 </html>
