--- a/responsive/index.html
+++ b/responsive/index.html
@@ -7,9 +7,14 @@
     <style>
         @import url("style.css");
         @import url('responsive.css');
+        @import url('./print.css');
     </style>
 </head>
 <body>
+
+    <h3>don't copy and paste </h3>
+<header> this is my page header</header>
+<footer>this is my footer @2025</footer>
 
 <h1>heading one</h1>
 <div class="row">
@@ -22,7 +27,8 @@
         <img src="https://static.vecteezy.com/system/resources/thumbnails/058/144/254/small/beautiful-flowers-wallpaper-image-of-flowers-free-photo.jpg">
         <h2>heading</h2>
         <p>"Responsive" generally refers to Responsive Web Design (RWD), a method making websites adapt to any screen (desktop, tablet, phone)</p>
-    </div>
+        <p class="onlyprint">Print media is the oldest form of mass communication, involving physical, ink-on-paper publications like newspapers, magazines, books, flyers, and posters, delivering information and entertainment through text and images. It's valued for credibility, tangibility, and in-depth content, offering a physical copy readers can keep, despite the rise of digital media, and remains crucial for targeted advertising and public discourse. Print media is the oldest form of mass communication, involving physical, ink-on-paper publications like newspapers, magazines, books, flyers, and posters, delivering information and entertainment through text and images. It's valued for credibility, tangibility, and in-depth content, offering a physical copy readers can keep, despite the rise of digital media, and remains crucial for targeted advertising and public discourse. </p>
+</div>
     <div class="hd">
         <img src="https://static.vecteezy.com/system/resources/thumbnails/058/144/254/small/beautiful-flowers-wallpaper-image-of-flowers-free-photo.jpg">
         <h2>heading</h2>
